@@ -37,6 +37,11 @@ public class MainGUI extends JFrame implements ActionListener{
   MainGUI(ExcelManager EM){
     super("Biblioteca Pessoal");
     this.setLayout(new GridLayout(2, 1));
+    this.setSize(1280, 720);	//Tamanho da janela
+    //this.setTitle("Biblioteca Pessoal");	//Nome da janela
+    this.setLocationRelativeTo(null);	//Abrir centralizada
+    this.setDefaultCloseOperation(JFrame.EXIT_ON_CLOSE);	//Finalizar quando sair
+    this.setVisible(true);	//Fazer a janela aparecer
     
     this.Excel = EM;
     this.books = EM.obtainBookBlock(this.page);
@@ -117,6 +122,15 @@ public class MainGUI extends JFrame implements ActionListener{
     this.setJMenuBar(menu);
     this.add(top);
     this.add(sp);
+
+    JPanel panelButtons = new JPanel();
+    JButton prior = new JButton("<");
+    JButton next = new JButton(">");
+    
+    panelButtons.add(prior);
+    panelButtons.add(next);
+    
+    this.add(panelButtons, BorderLayout.SOUTH);
   }
   
   @Override
@@ -155,7 +169,7 @@ public class MainGUI extends JFrame implements ActionListener{
           File readFile = new File("Biblioteca.xlsx");
           System.out.println(readFile);
           FileInputStream fileReader = new FileInputStream(readFile);
-          byte[] data = fileReader.readAllBytes();
+          byte[] data = Files.readAllBytes(readFile.toPath());
           fos.write(data);
           fos.close();
           fileReader.close();
